--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,18 @@
   box-sizing: border-box;
 }
 
+/* 
+
+
+
+  
+*/
 body {
   height: 100vh;
   /* color: #fff; */
   display: grid;
   place-items: center;
+  gap: 20px;
   font-family: "minecraft";
   background-color: #ededed;
   /* padding: 20px; */
@@ -21,7 +28,8 @@ body {
   flex-direction: column-reverse;
   align-items: center;
   justify-content: center;
-  gap: 30px;
+  row-gap: 20px;
+  padding-block: 10px;
 }
 
 h1 {
@@ -46,14 +54,24 @@ h1 {
   /* height: 10px; */
 }
 .sidebar {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-  gap: 30px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
 }
 
-@media screen and (min-width: 700px) {
+.wheel-container {
+  /* border: 1px solid red; */
+  /* border-radius: 2px; */
+}
+
+.wheel {
+  width: 100%;
+  height: 100%;
+  border: none;
+  background: transparent;
+}
+
+@media screen and (min-width: 750px) {
   .wrapper {
     flex-direction: row;
     gap: 100px;
@@ -62,9 +80,37 @@ h1 {
     height: 400px;
     width: 400px;
   }
+  .wheel-container {
+    width: 90px;
+    height: 90px;
+  }
+
   h1 {
     font-size: 4.5rem;
     margin-top: 30px;
+  }
+
+  .sidebar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    row-gap: 20px;
+  }
+
+  .wheel {
+    padding: 0;
+    border: 0;
+    width: 200%;
+    height: 200%;
+    transform: translate(-25%, -25%);
+  }
+
+  .wheel-container {
+    width: 90px;
+    height: 90px;
+    overflow: hidden;
+    border-radius: 50%;
   }
 }
 
@@ -76,21 +122,6 @@ h1 {
   .wrapper {
     justify-content: space-between;
   }
-}
-
-.wheel-container {
-  width: 90px;
-  height: 90px;
-  overflow: hidden;
-  border-radius: 50%;
-}
-
-.wheel {
-  padding: 0;
-  border: 0;
-  width: 200%;
-  height: 200%;
-  transform: translate(-25%, -25%);
 }
 
 .btn {
@@ -115,4 +146,28 @@ h1 {
 .btn:hover {
   background-color: #222;
   color: whitesmoke;
+}
+
+footer {
+  background-color: #222;
+  height: 80px;
+  color: whitesmoke;
+  display: grid;
+  place-items: center;
+  width: 100%;
+  text-transform: capitalize;
+}
+
+.range-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  gap: 10px;
+  grid-column: 1/3;
+}
+.range {
+  /* width: 100%; */
+  flex-grow: 1;
+  height: 50px;
 }
